--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -64,4 +64,12 @@
         app:layout_constraintVertical_bias="0.0"
         tools:text="Logout" />
 
+    <Button
+        android:id="@+id/button_editAccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Account Settings"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="462dp" />
+
 </android.support.constraint.ConstraintLayout>
