--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -36,7 +36,7 @@
         android:layout_marginTop="224dp"
         android:layout_marginEnd="108dp"
         android:onClick="videoPlay"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/upvoteButton"
         app:layout_constraintTop_toTopOf="parent"
@@ -117,11 +117,12 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:inputType="numberSigned"
-        android:text="Test"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/downvoteButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.392"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/upvoteButton"
+        app:layout_constraintVertical_bias="0.506" />
 
 
 </android.support.constraint.ConstraintLayout>
