--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -157,9 +158,8 @@
 
             <TextView
                 android:id="@+id/voteCondition"
-                android:layout_width="wrap_content"
+                android:layout_width="15dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
@@ -169,7 +169,10 @@
                 android:id="@+id/downvoteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/bluedownvote" />
+                android:src="@drawable/bluedownvote"
+                android:textAlignment="center"
+                android:layout_gravity="center_horizontal"/>
+
 
             <ImageButton
                 android:id="@+id/commentPathway"
