Account settings page

--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -148,7 +148,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:id="@+id/vote_layout">
 
             <ImageButton
                 android:id="@+id/upvoteButton"
@@ -183,7 +184,17 @@
                 android:onClick="commentPathway"
                 android:src="@drawable/downvote"
                 android:text="Comments" />
+
         </LinearLayout>
-    </LinearLayout>
+
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Settings"
+                android:id="@+id/settings_button"
+                />
+        </LinearLayout>
+
+
 </RelativeLayout>
 
