Added code to figure out how to overlay text on an image

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -17,4 +17,9 @@
         android:layout_height="wrap_content"
         android:contentDescription="Take image of picture" />
 
+    <EditText
+        android:id="@+id/write_on_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
 </LinearLayout>
