--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -122,6 +122,7 @@
         <FrameLayout
             android:layout_width="400dp"
             android:layout_height="match_parent">
+
             <VideoView
                 android:id="@+id/post_video"
                 android:layout_width="match_parent"
@@ -137,24 +138,25 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="80dp"
                 android:onClick="videoSelected"
-                android:visibility="visible"
-                android:src="@android:drawable/ic_media_play" />
+                android:src="@android:drawable/ic_media_play"
+                android:visibility="visible" />
 
         </FrameLayout>
 
 
         <LinearLayout
+            android:id="@+id/vote_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:orientation="horizontal"
-            android:id="@+id/vote_layout">
+            android:orientation="horizontal">
 
             <ImageButton
                 android:id="@+id/upvoteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:background="@null"
                 android:src="@drawable/blueupvote" />
 
             <TextView
@@ -170,9 +172,10 @@
                 android:id="@+id/downvoteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="@null"
                 android:src="@drawable/bluedownvote"
-                android:textAlignment="center"
-                android:layout_gravity="center_horizontal"/>
+                android:textAlignment="center" />
 
 
             <ImageButton
@@ -187,13 +190,12 @@
 
         </LinearLayout>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Settings"
-                android:id="@+id/settings_button"
-                />
-        </LinearLayout>
+        <Button
+            android:id="@+id/settings_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Settings" />
+    </LinearLayout>
 
 
 </RelativeLayout>
