--- a/app/src/main/res/layout/activity_edit_account_settings.xml
+++ b/app/src/main/res/layout/activity_edit_account_settings.xml
@@ -66,4 +66,20 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
+    <Button
+        android:id="@+id/btnRemoveAcc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="Delete Account"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/save_settings_button"
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toEndOf="@+id/goback_button"
+        app:layout_constraintTop_toBottomOf="@+id/edit_text_lastName"
+        app:layout_constraintVertical_bias="0.983" />
+
 </android.support.constraint.ConstraintLayout>
