post activity, saving post to storage

--- a/app/src/main/res/layout/activity_edit_account_settings.xml
+++ b/app/src/main/res/layout/activity_edit_account_settings.xml
@@ -73,22 +73,29 @@
             android:layout_height="50dp"
             android:orientation="horizontal">
 
-            <RadioButton
-                android:id="@+id/btnMale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+            <RadioGroup
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-                android:text="Male"
-                />
+                <RadioButton
+                    android:id="@+id/btnMale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:checked="false"
+                    android:text="Male"
+                    />
 
-            <RadioButton
-                android:id="@+id/btnFemale"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:text="Female"
-                />
+                <RadioButton
+                    android:id="@+id/btnFemale"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:checked="false"
+                    android:text="Female"
+                    />
+            </RadioGroup>
         </LinearLayout>
 
         <EditText
