users are now able to clicks posts to view photo and description and allow them to click edit or delete post. those functions are not yet written.

--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -149,7 +149,8 @@
                 android:baselineAlignBottom="false"
                 android:onClick="commentPathway"
                 android:src="@drawable/comment"
-                android:text="Comments" />
+                android:text="Comments"
+                android:background="#ffffff"/>
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
