--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -103,7 +103,7 @@
             android:layout_height="200dp"
             android:layout_margin="3dp"
             android:adjustViewBounds="true"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             />
 
 
@@ -143,8 +143,8 @@
 
             <ImageButton
                 android:id="@+id/commentPathway"
-                android:layout_width="100dp"
-                android:layout_height="match_parent"
+                android:layout_width="99dp"
+                android:layout_height="40dp"
                 android:layout_marginLeft="160dp"
                 android:baselineAlignBottom="false"
                 android:onClick="commentPathway"
