--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/drawable_layout"
-    tools:context=".Home">
+    tools:context=".Home"
+    android:background="@color/mainBackground">
 
     <RelativeLayout
         android:layout_width="match_parent"
