--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#555959</color>
     <color name="colorAccent">#009e9e</color>
     <color name="colorProfile">#3B4041</color>
+    <color name="mainBackground">#D7D7D7</color>
 
     <color name="bg_login">#26ae90</color>
     <color name="bg_register">#2e3237</color>
