implemented comment button, takes users to commentActivity

--- a/app/src/main/res/layout/all_posts_layout.xml
+++ b/app/src/main/res/layout/all_posts_layout.xml
@@ -115,7 +115,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:padding="5dp">
 
             <ImageButton
                 android:id="@+id/likeButton"
